SimGrid (3.12) NOT RELEASED; urgency=low

 Build System
  * Require g++ v4.7 at least to not speak prehistorical C++.
  * Require Boost 1.48 (for signal2 component).
  * Tracing is now always enabled (no way to turn it out)
  * Remove GTNetS. It was not working anyway.
  * Move headers around to sort them out on installed systems:
    - instr/instr.h  -> simgrid/instr.h
    - instr/jedule/* -> simgrid/jedule
    - simdag/datatypes.h was removed
    - simdag/simdag.h -> simgrid/simdag.h
    - msg/datatypes.h was removed
    - msg/msg.h -> simgrid/msg.h

 cMSG:
 * Interface improvement:
   - Rename MSG_host_is_avail(h) to MSG_host_is_on(h)
   - Sanitize the interface in MSG_task_ module:
     - Merge two functions that were close enough but misleading:
       set_compute_duration(t)      -> set_flops_amount(t)
       get_remaining_computation(t) -> get_flops_amount(t)
     - set_data_size(t) -> set_bytes_amount(t)
       get_data_size(t) -> get_bytes_amount(t)
   - Massive cleanups in the functions related to the energy
     - MSG_host_get_pstate_number() -> MSG_host_get_nb_pstates()
   - New: MSG_host_get_pstate()
 * New example:
   - msg/energy/onoff: switching hosts on and off
 jMSG:
 * Interface improvement:
   - Rename Host.isAvail() to Host.isOn()
   - Rename Process.currentProcess() to Process.getCurrentProcess()
   - Rename Task.setDataSize() to Task.setBytesAmount()
   - Merge Task.getRemainingDuration() and Task.getComputeDuration() into Task.getFlopsAmount()
 * Bug fixes:
   - #18874: Actually allows the GC to reclaim tasks

 SIMIX:
 * New functions
   - SIMIX_process_throw: raises an exception in a remote process
 * Refactoring: Separate sub-modules
   - libsmx: the public interface, as libc in a real system
   - popping: the strange dance that converts a user request into a kernel handling
   - smx_context_*: the virtualization mechanisms that embed the user code
   - smx_*: the handling of each simcalls
 * Interface cleanup: